# docs-maker

./: .gitignore  README.md  compile_ui.sh  docs_maker_web.sh  linters.sh  pyproject.toml
.github/workflows/: docs_maker.yml
docs_maker/: __init__.py
docs_maker/cli/: argparse.py
docs_maker/database/: base.py  init_db.py
docs_maker/database/models/: __init__.py
docs_maker/database/services/: config_service.py
docs_maker_gui/: db.sqlite
docs_maker_gui/classes/: CRUD.py  DbIndicator.py  LangSwitcher.py  MainWIndow.py  SetUpWidgets.py
docs_maker_gui/resources/: resources.py  resources.qrc
docs_maker_gui/ui/: db-indicator.ui  db_indicator.py  docs-maker-main-window.ui  docs_maker_main_window.py
docs_maker_messages/en/LC_MESSAGES/: messages.mo  messages.po
docs_maker_messages/ru/LC_MESSAGES/: messages.mo  messages.po
docs_maker_pyside6/: __init__.py  __main__.py
docs_maker_pyside6/classes/: MainWIndow.py
docs_maker_pyside6/resources/: resources.py
docs_maker_pyside6/ui/: docs_maker_main_window.py
docs_maker_web/: manage.py
docs_maker_web/docs_maker_web/: asgi.py  settings.py  urls.py  wsgi.py
docs_maker_web/docsmaker/: apps.py  models.py  urls.py  views.py
docs_maker_web/docsmaker/migrations/: 0001_initial.py
docs_maker_web/docsmaker/templates/docsmaker/: dm_index.html
tests/: test_database.py  test_docs_maker_cli.py
