[tool.poetry]
name = "docs-maker"
version = "0.1.0"
description = "Documents Maker"
authors = ["Roman <rabalan83@main.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docs-maker = 'docs_maker.cli.argparse:cli'